--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,9 @@ aside{
     display: grid;
     grid-template-columns: repeat(3, lft);
     grid-gap: 10px;
+    align-content: center;
+    grid-template-columns: auto;
+    justify-content: space-evenly;
 
 }.grid-item{
     background-color: green;
